# squawk

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  mediafile.cpp  mediafile.h  squawkmain.cpp
httpcpp/: CMakeLists.txt
httpcpp/doc/: toc.h.unused
httpcpp/includes/: fileservlet.h  http.h  httpclient.h  httprequest.h  httprequesthandler.h  httprequestparser.h  httpresponse.h  httpservlet.h  httputils.h  ihttpclientconnection.h  mimetypes.h  webserver.h
httpcpp/includes/httpcpp/: httpclient.h  httprequest.h  httprequesthandler.h  httprequestparser.h  httpresponse.h  httpresponseparser.h  httpservlet.h  httpservletcontext.h  httpstatus.h  httputils.h  ihttpclientconnection.h  ihttpserver.h  mimetypes.h  webserver.h
httpcpp/src/: httpclient.cpp  httpmain.cpp  httpparser.cpp  httprequest.cpp  httprequestparser.cpp  httpresponse.cpp  httpresponseparser.cpp  httpserverimpl.cpp  httpserverimpl.h  httpservlet.cpp  package.h  webserver.cpp
httpcpp/src/asio/: asioconnection.cpp  asioconnection.h  asioserver.cpp  asioserver.h  httpclientconnection.cpp  httpclientconnection.h  httpconnection.cpp  httpconnection.h  httpserver.cpp  httpserver.h  httpserverfactory.cpp  httpserverfactory.h
httpcpp/src/asio.old/: asioconnection.cpp  asioconnection.h  asioserver.cpp  asioserver.h  connection_manager.cpp  connection_manager.h  httpserverfactory.cpp  httpserverfactory.h
httpcpp/src/servlet/: defaulterrorservlet.cpp  defaulterrorservlet.h  fileservlet.cpp
httpcpp/test/: httpclienttest.cpp  httpparsertest.cpp  httpresponseparsertest.cpp  httpservlettest.cpp  mimetypetest.cpp  testmain.cpp  urlencodetest.cpp
server/: CMakeLists.txt  README.md
server/config/: logger-console.properties  logger.properties  squawk-init-script  squawk.xml  squawk2.xml
server/docroot/: index.html  style.css
server/docroot/js/: controllers.js
server/src/: squawk.h  squawkconfig.cpp  squawkconfig.h  squawkeventqueue.h  squawkserver.cpp  squawkserver.h  upnpconnectionmanager.cpp  upnpconnectionmanager.h  upnpcontentdirectory.cpp  upnpcontentdirectory.h  upnpcontentdirectoryapi.cpp  upnpcontentdirectoryapi.h  upnpcontentdirectorydao.cpp  upnpcontentdirectorydao.h  upnpcontentdirectoryfile.cpp  upnpcontentdirectoryfile.h  upnpcontentdirectoryimage.cpp  upnpcontentdirectoryimage.h  upnpcontentdirectorymusic.cpp  upnpcontentdirectorymusic.h  upnpcontentdirectoryparser.cpp  upnpcontentdirectoryparser.h  upnpcontentdirectoryvideo.cpp  upnpcontentdirectoryvideo.h  upnpmediaservlet.cpp  upnpmediaservlet.h  upnpxmldescription.cpp  upnpxmldescription.h
server/src/db/: sqlite3connection.cpp  sqlite3connection.h  sqlite3database.h  sqlite3statement.cpp  sqlite3statement.h
server/src/doc/: toc.h
server/src/upnp/: didl.cpp  didl.h  didlxmlwriter.cpp  didlxmlwriter.h  upnp.h  upnp2.h
server/src/utils/: amazonfacade.cpp  amazonfacade.h  amazonrest.h  base64.cpp  base64.h  image.cpp  image.h  media.h  pdfparser.cpp  utctimestamp.h  xml.h
server/test/: testsquawkconfig.cpp  testupnpcontentdirectorydao.cpp  upnpcontentdirectoryparsertest.cpp
server/test/db/: testsqlite3connectionmanager.cpp
server/test/upnp/: TestParseConnectionManager.cpp  didljsonwritertest.cpp  didlxmlwritertest.cpp  upnptest.cpp
server/test/utils/: XmlParseTest.cpp  XmlWriterTest.cpp  testamazonfacade.cpp  testmedia.cpp
squawk-server/: CMakeLists.txt  Doxyfile.in  squawk.cfg
squawk-server/config/: logger-console.properties  logger.properties  squawk.xml  squawk2.xml
squawk-server/docroot/: ConnectionMgr.xml  ContentDir.xml  console.html  index.html  jsonview.html
squawk-server/docroot/api-console/: README.md
squawk-server/docroot/bootstrap/: index.html  style.css
squawk-server/docroot/console/: album-detail.html  album-letter.html  album-list.html  albums-by-artist-list.html  albums.html  application.js  artist-list.html  artists.html  console.css  controllers.js  devices-list.html  index.html  main.html  squawk.raml  statistics.html
squawk-server/docroot/gui/: index.html  style.css
squawk-server/docroot/js/: application.js  controllers.js
squawk-server/docroot/main/: index.html  style.css
squawk-server/docroot/squawk/: album-by-artist.html  album-list.html  album.html  application.js  artist-list.html  controllers.js  index.html  style.css  video-list.html
squawk-server/docroot/templates/: album-item.html  album-list.html  browse.html  upnpevents.html
squawk-server/includes/: squawk-utils.h.back  squawk.h
squawk-server/src/: loggereventlistener.cpp  loggereventlistener.h  squawk.h  squawkconfig.cpp  squawkconfig.h  squawkeventqueue.cpp  squawkmain.cpp  squawkserver.cpp  squawkserver.h  squawkservice.cpp  squawkservice.h  upnpconnectionmanager.cpp  upnpconnectionmanager.h  upnpcontentdirectory.cpp  upnpcontentdirectory.h  upnpcontentdirectoryapi.cpp  upnpcontentdirectoryapi.h  upnpcontentdirectorydao.cpp  upnpcontentdirectorydao.h  upnpcontentdirectoryfile.cpp  upnpcontentdirectoryfile.h  upnpcontentdirectoryimage.cpp  upnpcontentdirectoryimage.h  upnpcontentdirectorymusic.cpp  upnpcontentdirectorymusic.h  upnpcontentdirectoryparser.cpp  upnpcontentdirectoryparser.h  upnpcontentdirectoryvideo.cpp  upnpcontentdirectoryvideo.h  upnpmediaservlet.cpp  upnpmediaservlet.h  upnpxmldescription.cpp  upnpxmldescription.h
squawk-server/src/api/: abstractapialbumsservlet.cpp  abstractapialbumsservlet.h  apialbumitemservlet.cpp  apialbumitemservlet.h  apialbumlistservlet.cpp  apialbumlistservlet.h  apialbumsletterservlet.cpp  apialbumsletterservlet.h  apialbumsservlet.cpp  apialbumsservlet.h  apiartistlistservlet.cpp  apiartistlistservlet.h  apibooklistservlet.cpp  apibooklistservlet.h  (+17 more)
squawk-server/test/: TestConfigParser.cpp  TestTextParse.cpp  testmain.cpp  testoptionsparser.cpp  testsquawkconfig.cpp  testupnpcontentdirectoryapi.cpp  testupnpcontentdirectoryparser.cpp  testutils.cpp
ssdpcpp/: CMakeLists.txt  Doxyfile.in
ssdpcpp/includes/: ssdp.h
ssdpcpp/src/: ssdp.h  ssdpserverimpl.cpp  ssdpserverimpl.h
ssdpcpp/test/: devicedescriptionparsertest.cpp  headerparsetest.cpp  testuriparser.cpp  timertest.cpp
(+150 files in other folders)
